# pyntc

./: .bandit.yml  .cookiecutter.json  .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  example.invoke.yml  mkdocs.yml  pyproject.toml  setup.py  tasks.py  towncrier_template.j2  tox.ini  upgrade.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/styles/: dummy.txt
.github/workflows/: ci.yml  python-package.yml  release.yml
changes/: +docs-fixes.housekeeping  335.housekeeping  345.added  350.added  354.fixed  364.removed  365.added  366.added  366.fixed  367.added  368.changed  368.housekeeping  370.added  371.added  372.added  373.added  375.added  376.added  380.fixed  383.changed  387.changed  387.fixed  388.changed  388.deprecated  mm.added  mm.removed
docs/: conf.py  generate_code_reference_pages.py  index.md  requirements.txt
docs/admin/: install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_0.14.md  version_0.15.md  version_0.20.md  version_0_0.md  version_0_16.md  version_0_17.md  version_0_18.md  version_0_19.md  version_0_20.md  version_1_0.md  version_2.1.md  version_2.2.md  version_2.3.md  version_2.4.md  version_2_0.md  version_3.0.md
docs/dev/: contributing.md  dev_environment.md
docs/dev/code-reference/pyntc/: __init__.html  errors.html  log.html
docs/dev/code-reference/pyntc/devices/: __init__.html  aireos_device.html  asa_device.html  base_device.html  eos_device.html  f5_device.html  ios_device.html  iosxewlc_device.html  jnpr_device.html  nxos_device.html
docs/dev/code-reference/pyntc/utils/: __init__.html  converters.html  models.html
docs/user/: lib_getting_started.md  lib_overview.md
ntc_lib/: __init__.py  errors.py
ntc_lib/devices/: base_device.py  eos_device.py  nxos_device.py
ntc_lib/features/: base_feature.py
pyntc/: __init__.py  cli.py  errors.py  log.py
pyntc/data_model/: converters.py
pyntc/data_model/key_maps/: eos_key_maps.py  ios_key_maps.py  nxos_key_maps.py
pyntc/data_model/schemas/: __init__.py  base.json  facts.json  vlan.json  vlan_detail_list.json  vlan_list.json
pyntc/devices/: __init__.py  aireos_device.py  asa_device.py  base_device.py  base_netmiko.py  eos_device.py  f5_device.py  ios_device.py  ios_xr_device.py  iosxewlc_device.py  jnpr_device.py  nxos_device.py
pyntc/devices/pynxos/: device.py  errors.py
pyntc/devices/pynxos/features/: base_feature.py  file_copy.py  vlans.py
pyntc/devices/pynxos/lib/: __init__.py  rpc_client.py
pyntc/devices/pynxos/lib/data_model/: converters.py  key_maps.py
pyntc/devices/system_features/: __init__.py  base_feature.py
pyntc/devices/system_features/file_copy/: base_file_copy.py  eos_file_copy.py
pyntc/devices/system_features/vlans/: __init__.py  base_vlans.py  eos_vlans.py
pyntc/devices/tables/: __init__.py
pyntc/devices/tables/jnpr/: __init__.py  loopback.py  loopback.yml
pyntc/features/: base_feature.py
pyntc/features/file_copy/: base_file_copy.py  eos_file_copy.py
pyntc/features/vlans/: base_vlans.py  eos_vlans.py  nxos_vlans.py
pyntc/local/: __init__.py  bin  devices  errors.py  include  lib  utils
pyntc/templates/: __init__.py
pyntc/utils/: __init__.py  converters.py  log.py  models.py
pyntc/utils/templates/: __init__.py  arista_eos_show_interfaces_status.template  arista_eos_show_version.template  arista_eos_show_vlan.template  cisco_asa_show_interface.template
test/fixtures/: .ntc.conf  .ntc.conf.sample  .ntclib2.conf  nxos.py
test/system/: base_device_test.py  test_devices.py  test_runner.py
test/system/test_feature/: test_vlan.py
test/unit/: conftest.py  test_eos_device.py  test_errors.py  test_infra.py
test/unit/device_mocks/eos/: __init__.py
test/unit/device_mocks/eos/enable_json/: configure_replace_good_checkpoint_force  copy_running-config_good_checkpoint  install_source_new_image.swi  show_hostname
test/unit/test_device/: test_eos_device.py  test_nxos_device.py
test/unit/test_devices/: test_aireos_device.py  test_asa_device.py  test_base_netmiko.py  test_eos_device.py  test_f5_device.py  test_ios_device.py  test_iosxewlc_device.py  test_jnpr_device.py  test_nxos_device.py
test/unit/test_devices/device_mocks/aireos/: ap_boot_options_backup.json  ap_boot_options_mixed.json  ap_boot_options_primary.json  ap_image_stats_failed.json  reset_system_confirm.txt  send_command_also.txt  show_ap_image_all.txt  show_ap_image_all_boot_options.json  show_ap_image_all_image_stats.json  show_ap_image_mixed.txt  show_ap_image_mixed_boot_options.json  show_boot_backup.txt  show_boot_no_default.txt  show_redundancy_summary_sso_enabled.txt  show_redundancy_summary_standalone.txt  show_redundancy_summary_standby.txt  show_sysinfo_false.txt  show_wlan_summary.txt  transfer_download_start_yes.txt
test/unit/test_devices/device_mocks/asa/: __init__.py
test/unit/test_devices/device_mocks/eos/: __init__.py
test/unit/test_devices/device_mocks/ios/: __init__.py  interface_Gig0.txt  no_service_pad.txt  show_ip_arp.txt  show_redundancy_slot_unavailable.txt  show_version.txt
test/unit/test_devices/device_mocks/iosxe/: dir.txt  error.txt  show_redundancy_standby.txt  show_version_install_mode.txt
test/unit/test_feature/test_vlan/: __init__.py  eos_mock.py  nxos_mock.py  test_vlan.py
test/unit/test_system_features/test_file_copy/: test_eos_file_copy.py
test/unit/test_system_features/test_vlan/: test_eos_vlan.py
tests/fixtures/: .ntc.conf  .ntc.conf.sample
tests/integration/: _helpers.py  conftest.py  test_asa_device.py  test_eos_device.py  test_jnpr_device.py
tests/unit/: conftest.py  test_basic.py  test_basics.py  test_cli.py  test_errors.py  test_infra.py  test_logging.py
tests/unit/test_devices/: test_aireos_device.py  test_asa_device.py  test_eos_device.py  test_f5_device.py  test_ios_device.py  test_ios_xr_device.py  test_iosxewlc_device.py  test_jnpr_device.py  test_nxos_device.py
tests/unit/test_system_features/test_vlan/: test_eos_vlan.py
tests/unit/utils/: test_models.py
(+96 files in other folders)
